src/main/java/org/clematis/math/v1/parser/string/StringMathParser.java
/* Generated By:JJTree&JavaCC: Do not edit this line. StringMathParser.java */
package org.clematis.math.v1.parser.string;

import java.io.StringReader;

public class StringMathParser/*@bgen(jjtree)*/
    implements StringMathParserTreeConstants, StringMathParserConstants {/*@bgen(jjtree)*/
    protected JJTStringMathParserState jjtree = new JJTStringMathParserState();

    public static String parse(String expr) {
        StringMathParser parser = new StringMathParser(new StringReader(expr));

        try {
            SimpleNode n = parser.Start();
            StringBuilder sb = new StringBuilder();
            WebTexPrinter.print(n, sb);
            return sb.toString();
        } catch (Exception e) {
            e.printStackTrace();
        }

        return null;
    }

    public static void main(String[] args) {
        //System.out.println("Reading from standard input...");
        //StringMathParser parser = new StringMathParser(System.in);

        //String expr = "sin(3)";
        //String expr = "x+(sin(${x}/2)+a_2/9 * x ^ 3)";
        //String expr = "$b3*(x$x0_rsgn$x0_abs)*(x$x1_rsgn$x1_abs)*(x$x2_rsgn$x2_abs)" +
        //       "+$b2*(x$x0_rsgn$x0_abs)*(x$x1_rsgn$x1_abs)+$b1*(x$x0_rsgn$x0_abs)+$b0+sin(x)";
        // String expr = "-ln($a)*pi/(x*(ln(x)^2)) + (1 - 8 )";
        //String expr = "-ln(((($a+1)*($k-9))))*pi/(x*(ln(x)^2))-(x-y)";
        //String expr = "-ln($a+cos($k*x))/$k + sinx";
        String expr = "1/(2*(x+1)^(0.5))";
        StringMathParser parser = new StringMathParser(new StringReader(expr));

        try {
            SimpleNode n = parser.Start();
            n.dump(" ");
            System.out.println(expr);
            StringBuilder sb = new StringBuilder();
            WebTexPrinter.print(n, sb);
            System.out.println("------------");
            System.out.println(sb);
        } catch (Exception e) {
            e.printStackTrace();
        }
    }

    final public SimpleNode Start() throws ParseException {
        SimpleNode jjtn001 = new SimpleNode(JJTEXPR);
        boolean jjtc001 = true;
        jjtree.openNodeScope(jjtn001);
        try {
            Expression();
            jj_consume_token(0);
            jjtree.closeNodeScope(jjtn001, true);
            jjtc001 = false;
            {
                if (true) {
                    return jjtn001;
                }
            }
        } catch (Throwable jjte001) {
            if (jjtc001) {
                jjtree.clearNodeScope(jjtn001);
                jjtc001 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte001 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte001;
                    }
                }
            }
            if (jjte001 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte001;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte001;
                }
            }
        } finally {
            if (jjtc001) {
                jjtree.closeNodeScope(jjtn001, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public void Expression() throws ParseException {
        /*@bgen(jjtree) #EXPR(> 1) */
        SimpleNode jjtn000 = new SimpleNode(JJTEXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            PlusExpression();
            label_1:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case EQUALS:
                        break;
                    default:
                        jj_la1[0] = jj_gen;
                        break label_1;
                }
                t = jj_consume_token(EQUALS);
                jjtn000.setTokenName(t.image);
                PlusExpression();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
            }
        }
    }

    /*void NegativeExpr() :
    {
    }
    {
      (
          <MINUS> PlusExpression()
      )
      #UNARY_MINUS  |  PlusExpression()
    }*/
    final public void PlusExpression() throws ParseException {
        /*@bgen(jjtree) #PLUS_EXPR(> 1) */
        SimpleNode jjtn000 = new SimpleNode(JJTPLUS_EXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            MinusExpression();
            label_2:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case PLUS:
                        break;
                    default:
                        jj_la1[1] = jj_gen;
                        break label_2;
                }
                t = jj_consume_token(PLUS);
                jjtn000.setTokenName(t.image);
                MinusExpression();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
            }
        }
    }

    final public void MinusExpression() throws ParseException {
        /*@bgen(jjtree) #MINUS_EXPR(> 1) */
        SimpleNode jjtn000 = new SimpleNode(JJTMINUS_EXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            MultExpression();
            label_3:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case MINUS:
                        break;
                    default:
                        jj_la1[2] = jj_gen;
                        break label_3;
                }
                t = jj_consume_token(MINUS);
                jjtn000.setTokenName(t.image);
                MultExpression();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
            }
        }
    }

    final public void MultExpression() throws ParseException {
        /*@bgen(jjtree) #MULT_EXPR(> 1) */
        SimpleNode jjtn000 = new SimpleNode(JJTMULT_EXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            DivExpression();
            label_4:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case MULT:
                        break;
                    default:
                        jj_la1[3] = jj_gen;
                        break label_4;
                }
                t = jj_consume_token(MULT);
                jjtn000.setTokenName(t.image);
                DivExpression();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
            }
        }
    }

    final public void DivExpression() throws ParseException {
        /*@bgen(jjtree) #DIV_EXPR(> 1) */
        SimpleNode jjtn000 = new SimpleNode(JJTDIV_EXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            NegativeExpr();
            label_5:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case DIV:
                        break;
                    default:
                        jj_la1[4] = jj_gen;
                        break label_5;
                }
                t = jj_consume_token(DIV);
                jjtn000.setTokenName(t.image);
                NegativeExpr();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
            }
        }
    }

    final public void NegativeExpr() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case MINUS:
                SimpleNode jjtn001 = new SimpleNode(JJTUNARY_MINUS);
                boolean jjtc001 = true;
                jjtree.openNodeScope(jjtn001);
                try {
                    jj_consume_token(MINUS);
                    PowerExpression();
                } catch (Throwable jjte001) {
                    if (jjtc001) {
                        jjtree.clearNodeScope(jjtn001);
                        jjtc001 = false;
                    } else {
                        jjtree.popNode();
                    }
                    if (jjte001 instanceof RuntimeException) {
                        {
                            if (true) {
                                throw (RuntimeException) jjte001;
                            }
                        }
                    }
                    if (jjte001 instanceof ParseException) {
                        {
                            if (true) {
                                throw (ParseException) jjte001;
                            }
                        }
                    }
                    {
                        if (true) {
                            throw (Error) jjte001;
                        }
                    }
                } finally {
                    if (jjtc001) {
                        jjtree.closeNodeScope(jjtn001, true);
                    }
                }
                break;
            case NUMBER:
            case IDENTIFIER:
            case VARIABLE:
            case PI:
            case OPEN_BR:
            case 23:
            case 24:
            case 25:
            case 26:
            case 27:
            case 28:
            case 29:
            case 30:
            case 31:
            case 32:
            case 33:
            case 34:
            case 35:
            case 36:
            case 37:
            case 38:
            case 39:
            case 40:
            case 41:
            case 42:
            case 43:
            case 44:
            case 45:
            case 46:
            case 47:
            case 48:
            case 49:
            case 50:
            case 51:
            case 52:
            case 53:
                PowerExpression();
                break;
            default:
                jj_la1[5] = jj_gen;
                jj_consume_token(-1);
                throw new ParseException();
        }
    }

    final public void PowerExpression() throws ParseException {
        /*@bgen(jjtree) #POWER_EXPR(> 1) */
        SimpleNode jjtn000 = new SimpleNode(JJTPOWER_EXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            UnaryExpression();
            label_6:
            while (true) {
                switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                    case POWER:
                        break;
                    default:
                        jj_la1[6] = jj_gen;
                        break label_6;
                }
                t = jj_consume_token(POWER);
                jjtn000.setTokenName(t.image);
                UnaryExpression();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, jjtree.nodeArity() > 1);
            }
        }
    }

    final public void UnaryExpression() throws ParseException {
        switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
            case OPEN_BR:
                BrExpression();
                break;
            case VARIABLE:
                Variable();
                break;
            case NUMBER:
                Number();
                break;
            case IDENTIFIER:
                Identifier();
                break;
            default:
                jj_la1[7] = jj_gen;
                if (jj_2_1(2)) {
                    Function();
                } else {
                    switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                        case PI:
                            PI();
                            break;
                        default:
                            jj_la1[8] = jj_gen;
                            jj_consume_token(-1);
                            throw new ParseException();
                    }
                }
        }
    }

    final public void BrExpression() throws ParseException {
        /*@bgen(jjtree) BR_EXPR */
        SimpleNode jjtn000 = new SimpleNode(JJTBR_EXPR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            OpenBr();
            Expression();
            CloseBr();
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }

    final public Token Variable() throws ParseException {
        /*@bgen(jjtree) VAR */
        SimpleNode jjtn000 = new SimpleNode(JJTVAR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            t = jj_consume_token(VARIABLE);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setTokenName(t.image);
            {
                if (true) {
                    return t;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Token Number() throws ParseException {
        /*@bgen(jjtree) NUMBER */
        SimpleNode jjtn000 = new SimpleNode(JJTNUMBER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            t = jj_consume_token(NUMBER);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setTokenName(t.image);
            {
                if (true) {
                    return t;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Token Identifier() throws ParseException {
        /*@bgen(jjtree) IDENTIFIER */
        SimpleNode jjtn000 = new SimpleNode(JJTIDENTIFIER);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            t = jj_consume_token(IDENTIFIER);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setTokenName(t.image);
            {
                if (true) {
                    return t;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Token PI() throws ParseException {
        /*@bgen(jjtree) PI */
        SimpleNode jjtn000 = new SimpleNode(JJTPI);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            t = jj_consume_token(PI);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setTokenName("\\" + t.image);
            {
                if (true) {
                    return t;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Token OpenBr() throws ParseException {
        /*@bgen(jjtree) OPEN_BR */
        SimpleNode jjtn000 = new SimpleNode(JJTOPEN_BR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            t = jj_consume_token(OPEN_BR);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setTokenName(t.image);
            {
                if (true) {
                    return t;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public Token CloseBr() throws ParseException {
        /*@bgen(jjtree) CLOSE_BR */
        SimpleNode jjtn000 = new SimpleNode(JJTCLOSE_BR);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        Token t;
        try {
            t = jj_consume_token(CLOSE_BR);
            jjtree.closeNodeScope(jjtn000, true);
            jjtc000 = false;
            jjtn000.setTokenName(t.image);
            {
                if (true) {
                    return t;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
        throw new Error("Missing return statement in function");
    }

    final public void Function() throws ParseException {
        /*@bgen(jjtree) FUNCTION */
        SimpleNode jjtn000 = new SimpleNode(JJTFUNCTION);
        boolean jjtc000 = true;
        jjtree.openNodeScope(jjtn000);
        try {
            switch ((jj_ntk == -1) ? jj_ntk() : jj_ntk) {
                case 23:
                    FunctionSin(jjtn000);
                    break;
                case 24:
                    FunctionASin(jjtn000);
                    break;
                case 25:
                    FunctionCos(jjtn000);
                    break;
                case 26:
                    FunctionACos(jjtn000);
                    break;
                case 27:
                    FunctionTan(jjtn000);
                    break;
                case 28:
                    FunctionATan(jjtn000);
                    break;
                case 29:
                    FunctionSec(jjtn000);
                    break;
                case 30:
                    FunctionCsc(jjtn000);
                    break;
                case 31:
                    FunctionCot(jjtn000);
                    break;
                case 32:
                    FunctionExp(jjtn000);
                    break;
                case 33:
                    FunctionSqrt(jjtn000);
                    break;
                case 34:
                    FunctionLn(jjtn000);
                    break;
                case 35:
                    FunctionLg(jjtn000);
                    break;
                case 36:
                    FunctionLog(jjtn000);
                    break;
                case 37:
                    FunctionFact(jjtn000);
                    break;
                case 38:
                    FunctionACot(jjtn000);
                    break;
                case 39:
                    FunctionASec(jjtn000);
                    break;
                case 40:
                    FunctionACsc(jjtn000);
                    break;
                case 41:
                    FunctionAbs(jjtn000);
                    break;
                case 42:
                    FunctionSinh(jjtn000);
                    break;
                case 43:
                    FunctionASinh(jjtn000);
                    break;
                case 44:
                    FunctionCosh(jjtn000);
                    break;
                case 45:
                    FunctionACosh(jjtn000);
                    break;
                case 46:
                    FunctionTanh(jjtn000);
                    break;
                case 47:
                    FunctionATanh(jjtn000);
                    break;
                case 48:
                    FunctionCoth(jjtn000);
                    break;
                case 49:
                    FunctionACoth(jjtn000);
                    break;
                case 50:
                    FunctionSech(jjtn000);
                    break;
                case 51:
                    FunctionASech(jjtn000);
                    break;
                case 52:
                    FunctionCsch(jjtn000);
                    break;
                case 53:
                    FunctionACsch(jjtn000);
                    break;
                default:
                    jj_la1[9] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        } catch (Throwable jjte000) {
            if (jjtc000) {
                jjtree.clearNodeScope(jjtn000);
                jjtc000 = false;
            } else {
                jjtree.popNode();
            }
            if (jjte000 instanceof RuntimeException) {
                {
                    if (true) {
                        throw (RuntimeException) jjte000;
                    }
                }
            }
            if (jjte000 instanceof ParseException) {
                {
                    if (true) {
                        throw (ParseException) jjte000;
                    }
                }
            }
            {
                if (true) {
                    throw (Error) jjte000;
                }
            }
        } finally {
            if (jjtc000) {
                jjtree.closeNodeScope(jjtn000, true);
            }
        }
    }
